--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,37 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.square{
+  border: 1px solid black;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  padding: 0px;
+  float: left;
+  background: white;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font: 14px "Century Gothic", Futura, sans-serif;
+}
+
+.board-row:after{
+  display: table;
+  clear:both;
+  content: "";
+}
+
+#board{
+  float: left;
+  margin-left: 20px;
+  margin-top: 10px;
+}
+
+#nav{
+  float: left;
+  margin-left: 20px;
+}
+
+#reset{
+  float:left;
+  margin-left: 20px;
+  margin-top: 20px;
 }
